--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shareable-components-consumer-nextjs",
+  "name": "modular-ui-consumer-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,6 +16,11 @@
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26"
   }
 }
